--- a/app/partials/phone-detail.html
+++ b/app/partials/phone-detail.html
@@ -1,1 +1,26 @@
-TBD: detail view for <span>{{vm.phoneId}}</span>
+<img ng-src="{{vm.phone.images[0]}}" class="phone">
+
+<h1>{{vm.phone.name}}</h1>
+
+<p>{{vm.phone.description}}</p>
+
+<ul class="phone-thumbs">
+  <li ng-repeat="img in vm.phone.images">
+    <img ng-src="{{img}}">
+  </li>
+</ul>
+
+<ul class="specs">
+  <li>
+    <span>Availability and Networks</span>
+    <dl>
+      <dt>Availability</dt>
+      <dd ng-repeat="availability in vm.phone.availability">{{availability}}</dd>
+    </dl>
+  </li>
+  ...
+  <li>
+    <span>Additional Features</span>
+    <dd>{{vm.phone.additionalFeatures}}</dd>
+  </li>
+</ul>
