--- a/app/partials/phone-list.html
+++ b/app/partials/phone-list.html
@@ -15,7 +15,7 @@
       <!--Body content-->
 
       <ul class="phones">
-        <li ng-repeat="phone in vm.phones | filter:query | orderBy:vm.orderProp" class="thumbnail">
+        <li ng-repeat="phone in vm.phones | filter:query | orderBy:vm.orderProp" class="thumbnail phone-listing">
           <a href="#/phones/{{phone.id}}" class="thumb">
             <img ng-src="{{phone.imageUrl}}">
           </a>
